--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,8 +1,13 @@
+
+// Font Awesome
+@import "../../../bower_components/components-font-awesome/scss/font-awesome";
+
+// Bootstrap
 @import "../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 
 $font-stack: Helvetica, sans-serif;
 $black: #000000;
-$red: #e74c3c;
+$red: #c52f33;
 $light-gray: #ecf0f1;
 $white: #ffffff;
 
@@ -32,7 +37,7 @@ body {
   }
 }
 
-.home-header {
+.header {
   text-align: center;
   background: $light-gray;
   padding: 20px;
@@ -43,8 +48,26 @@ body {
 }
 
 .content {
+  margin-top: 20px;
+  margin-bottom: 20px;
+
   h2 {
     color: $red;
+  }
+}
+
+.social-networks {
+  padding: 10px;
+
+  a {
+    color: $red;
+    margin: 0px 5px 0px 5px;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: $gray;
+    text-decoration: none;
   }
 }
 
